# ChangeLog for app-emulation/wine
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/wine/ChangeLog,v 1.524 2014/12/16 15:06:28 pacho Exp $

*wine-1.7.37 (22 Feb 2015)

  22 Feb 2015; NP-Hardass <np.hardass@gmail.com> +wine-1.7.37.ebuild:
  Version bump to 1.7.37

  12 Feb 2015; NP-Hardass <np.hardass@gmail.com>
  +files/wine-gentoo-2013.06.24-xdg-dir-fix.patch, wine-1.7.33-r1.ebuild,
  wine-1.7.34.ebuild, wine-1.7.35.ebuild, wine-1.7.36.ebuild, wine-9999.ebuild:
  xdg menu fix, github issue #1

  12 Feb 2015; NP-Hardass <np.hardass@gmail.com> wine-1.7.33-r1.ebuild,
  wine-1.7.34.ebuild, wine-1.7.35.ebuild, wine-1.7.36.ebuild, wine-9999.ebuild:
  set lcms and xcomposite as default, github issue #3

*wine-1.7.36 (09 Feb 2015)

  09 Feb 2015; NP-Hardass <np.hardass@gmail.com> +wine-1.7.36.ebuild:
  Version bump to 1.7.36

  26 Jan 2015; NP-Hardass <np.hardass@gmail.com> wine-1.7.34.ebuild,
  wine-1.7.35.ebuild, wine-9999.ebuild:
  Include perl USE flag improvements

  26 Jan 2015; NP-Hardass <np.hardass@gmail.com> wine-1.7.35.ebuild:
  Forgot to include 1.7.35 in the revert.  Thanks slackner

  26 Jan 2015; NP-Hardass <np.hardass@gmail.com> wine-1.7.34.ebuild,
  wine-9999.ebuild:
  Revert wine to use old dependency code, because new dependency code doesn't
  work well with emul-linux packages See: Issue #1 Thanks to Aliekezhi for
  pointing it out.

*wine-1.7.35 (24 Jan 2015)

  24 Jan 2015; NP-Hardass <np.hardass@gmail.com> +wine-1.7.35.ebuild:
  Version bump to 1.7.35

  21 Jan 2015; NP-Hardass <np.hardass@gmail.com> wine-1.7.34.ebuild,
  wine-9999.ebuild, metadata.xml:
  Minor QA fixes

  21 Jan 2015; NP-Hardass <np.hardass@gmail.com> -wine-1.7.33.ebuild,
  +wine-1.7.33-r1.ebuild, +wine-1.7.34.ebuild, +wine-9999.ebuild,
  +files/wine-staging-gentoo-epatch-support.patch, metadata.xml:
  Import wine ebuilds from np-hardass-overlay

*wine-1.7.34-r2 (19 Jan 2015)
