@@ -2,6 +2,9 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/app-emulation/wine/ChangeLog,v 1.524 2014/12/16 15:06:28 pacho Exp $
 
+  22 Feb 2015; NP-Hardass <np.hardass@gmail.com> wine-1.7.37.ebuild:
+  Add new staging use flag, vaapi
+
 *wine-1.7.37 (22 Feb 2015)
 
   22 Feb 2015; NP-Hardass <np.hardass@gmail.com> +wine-1.7.37.ebuild:
